--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,7 @@
-<resources xmlns="http://schemas.android.com/tools">
-<!-- Base application theme. -->
-<style name="Base.Theme.IMADPROJECT2ST10479656" parent="Theme.Material3.DayNight.NoActionBar">
+<resources>
+  <!-- Base application theme. -->
+  <style name="Base.Theme.IMADPROJECT2ST10479656" parent="Theme.Material3.DayNight.NoActionBar">
     <!-- Customize your dark theme here. -->
     <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
-</style>
+  </style>
 </resources>
