--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
         android:background="#1DD51D"
-        android:text="@string/next_page"
+        android:backgroundTint="#4CAF50"
+        android:backgroundTintMode="add"
+        android:text="@string/start"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
