--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -31,6 +31,7 @@
         android:layout_marginStart="121dp"
         android:layout_marginTop="52dp"
         android:layout_marginEnd="24dp"
+        android:background="#009688"
         android:text="@string/true_button"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@id/falsebutton"
@@ -45,6 +46,7 @@
         android:layout_marginStart="112dp"
         android:layout_marginTop="220dp"
         android:layout_marginEnd="160dp"
+        android:background="#009688"
         android:text="@string/false_button"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBottomOf="parent"
@@ -71,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:background="#009688"
         android:text="@string/next_button"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
